various css fixes, mostly on mobile

--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -1,3 +1,7 @@
+
+$breakpoint-tablet: 900px;
+$breakpoint-mobile: 600px;
+
 $color-dark: #010100;
 $color-orange: #fe9400;
 $color-light: #fdfbf9;
